Add swagger doc for categories
