# controllers/categories.go
@@ -11,6 +11,15 @@ import (
 
 type CategoriesController struct{}
 
+// GetCategories godoc
+// @Summary get all categories
+// @Schemes
+// @Description get all categories
+// @Tags categories
+// @Accept json
+// @Produce json
+// @Success 200 {object} models.Categories
+// @Router /categories [get]
 func (ctrl *CategoriesController) GetCategories(c *gin.Context) {
 	query := "SELECT * FROM category"
 	rows, err := db.DB.Query(query)
@@ -41,6 +50,16 @@ func (ctrl *CategoriesController) GetCategories(c *gin.Context) {
 	})
 }
 
+// AddCategory godoc
+// @Summary add a category
+// @Schemes
+// @Description add a category
+// @Tags categories
+// @Accept json
+// @Produce json
+// @Param category body models.Categories true "Category object that needs to be added"
+// @Success 201 {string} string "Category created successfully"
+// @Router /recipes [post]
 func (ctrl *CategoriesController) AddCategory(c *gin.Context) {
 	query := "INSERT INTO category (name, coverimage) VALUES ($1, $2)"
 	var newCategory models.Categories
