# docs/swagger.json
@@ -12,6 +12,29 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/categories": {
+            "get": {
+                "description": "get all categories",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "categories"
+                ],
+                "summary": "get all categories",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Categories"
+                        }
+                    }
+                }
+            }
+        },
         "/recipes": {
             "get": {
                 "description": "get all recipes",
@@ -124,6 +147,20 @@
         }
     },
     "definitions": {
+        "models.Categories": {
+            "type": "object",
+            "properties": {
+                "coverimage": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Recipe": {
             "type": "object",
             "properties": {
